kylin-nm (3.0.1-1kylin58) v101; urgency=medium
  
  * BUG号：#51253 #65507 #65518 #56565 #66970
  * 需求号：无
  * 其他改动：修复增删有线网，有线列表不刷新问题

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Fri, 14 Jul 2021 15:46:13 +0800

kylin-nm (3.0.1-1kylin57) v101; urgency=medium

  * BUG号：#63907 #51262 #65498 #65502 #61100 #61346 #61517 #65961
  * 需求号：无
  * 其他改动：无

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Fri, 09 Jul 2021 10:00:56 +0800

kylin-nm (3.0.1-1kylin56) v101; urgency=medium

  * BUG号：#61187 #61255 #62956 #56352
  * 需求号：无
  * 其他改动：无

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Mon, 05 Jul 2021 20:29:20 +0800

kylin-nm (3.0.1-1kylin55) v101; urgency=medium

  * BUG号：#44352
  * 需求号：无
  * 其他改动：无

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Fri, 02 Jul 2021 16:14:18 +0800

kylin-nm (3.0.1-1kylin54) v101; urgency=medium

  * BUG号：#57502 #61141 #61356
  * 需求号：无
  * 其他改动：将kylin-nm在桌面通知和侧边栏的通知改为麒麟网络设置工具

 -- chenlelin <chenlelin@kylinos.cn>  Wed, 30 Jun 2021 21:45:42 +0800

kylin-nm (3.0.1-1kylin53) v101; urgency=medium

  * BUG号：#58766 #61534 #61628
  * 需求号：无
  * 其他改动：修复远程连接用户桌面无kylin-nm问题

 -- chenlelin <chenlelin@kylinos.cn>  Wed, 23 Jun 2021 11:00:42 +0800

kylin-nm (3.0.1-1kylin52) v101; urgency=medium

  * BUG号：#58755 #61924 #61509 #61783
  * 需求号：无
  * 其他改动：无

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Tue, 22 Jun 2021 15:17:42 +0800

kylin-nm (3.0.1-1kylin52) v101; urgency=medium

  * BUG号：#58755 #61924 #61509 #61783
  * 需求号：无
  * 其他改动：无

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Tue, 22 Jun 2021 15:17:42 +0800

kylin-nm (3.0.1-1kylin51) v101; urgency=medium

  * BUG号：无
  * 需求号：无
  * 其他改动：修改主程序启动方式为两段式启动，开机仅进行一级启动，五秒/点击托盘图标后进行二级启动

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Tue, 08 Jun 2021 16:49:12 +0800


kylin-nm (3.0.1-1kylin50) v101; urgency=medium

  * BUG号：无
  * 需求号：无
  * 其他改动：增加维测日志,优化WiFi刷新触发底层扫描,优化WiFi密码错误提醒,优化WiFi刷新dbus信号发送流程

 -- zhangjiaping <zhangjiaping@kylinos.cn>  Mon, 07 Jun 2021 19:54:21 +0800

kylin-nm (3.0.1-1kylin50) v101; urgency=medium

  * BUG号：无