@@ -1,1 +1,3 @@
-kylin-nm_3.0.1-1kylin54_source.buildinfo utils optional
+kylin-nm-dbgsym_3.0.1-1kylin59_amd64.ddeb debug optional automatic=yes
+kylin-nm_3.0.1-1kylin59_amd64.buildinfo utils optional
+kylin-nm_3.0.1-1kylin59_amd64.deb utils optional
